third_party/move/move-compiler/tests/move_check/simplifier/moved_var_not_simplified3.exp
error[E06002]: use of unassigned variable
  ┌─ tests/move_check/simplifier/moved_var_not_simplified3.move:5:17
  │
4 │         let y = move x;
  │                 ------
  │                 │
  │                 The value of 'x' was previously moved here.
  │                 Suggestion: use 'copy x' to avoid the move.
5 │         let _ = x;
  │                 ^ Invalid usage of previously moved variable 'x'.

